# GitlabWorkCLI

./: Cargo.toml  flake.nix  rustfmt.toml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/db/: create.rs  mod.rs  structs.rs
backend/src/db/models/: mod.rs
backend/src/watchers/: mod.rs  watch_merged_pipeline.rs  watch_mr.rs  watch_pipeline.rs  watch_pipline.rs  watch_task.rs
backend/src/wathers/: mod.rs  wath_pipline.rs
cli/: Cargo.toml
cli/src/: main.rs  structs.rs
cli/src/command_handlers/: checkout_feature.rs  checkout_task.rs  create_mr.rs  init.rs  mod.rs  update_host.rs  update_token.rs
helpers/: Cargo.toml
helpers/src/: app_config.rs  lib.rs  notifications.rs  printer.rs  project_config.rs  structs.rs
managers/: Cargo.toml
managers/src/: lib.rs
managers/src/git/: mod.rs
managers/src/gitlab/: mod.rs  structs.rs
src/: main.rs  structs.rs
src/cli/: mod.rs
src/commands/: checkout_feature.rs  checkout_task.rs  create_mr.rs  init.rs  mod.rs  update_host.rs  update_token.rs
src/git/: mod.rs
src/gitlab/: builders.rs  mod.rs
src/helpers/: mod.rs
