[package]
name = "helpers"
version = "0.1.0"
edition = "2024"

[lib]
name = "helpers"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1"
log = "0.4.29"
dirs = '6'
colored = "3"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4.12"
[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"