[package]
name = "managers"
version = "0.1.0"
edition = "2024"

[lib]
name = "managers"
path = "src/lib.rs"


[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
log = "0.4.29"
git2 = '0.18'
reqwest = { version = "*", features = ["socks"] }
gitlab = { version = "0.1808" }
derive_builder = "0.20.2"
helpers = {path = "../helpers"}